# mopidy-dleyna

./: .coveragerc  .travis.yml  CHANGELOG.rst  CHANGES.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  changelog.rst  conf.py  config.rst  index.rst  install.rst  license.rst
mopidy_dleyna/: __init__.py  backend.py  client.py  dleyna.py  ext.conf  gupnp.py  library.py  playback.py  translator.py  util.py
src/mopidy_dleyna/: __init__.py  client.py  ext.conf  library.py  playback.py  translator.py
tests/: conftest.py  test_browse.py  test_extension.py  test_images.py  test_lookup.py  test_playback.py  test_search.py  test_translator.py
